# BasalGuard

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo_agent_loop.py  docker-compose.yml  interactive_agent.py  pyproject.toml  simple_agent.py
.github/workflows/: ci.yml
agent_workspace/: main.py
logs/logs_56991265440/: 0_Test Python 3.10 on macos-latest.txt  10_Test Python 3.11 on macos-latest.txt  1_Test Python 3.12 on windows-latest.txt  2_Test Python 3.10 on windows-latest.txt  3_Test Python 3.11 on windows-latest.txt  4_Test Python 3.12 on ubuntu-latest.txt  5_Code Quality (Ruff).txt  6_Security Scan (Bandit).txt  7_Test Python 3.12 on macos-latest.txt  8_Test Python 3.11 on ubuntu-latest.txt  9_Test Python 3.10 on ubuntu-latest.txt
logs/logs_56991265440/Code Quality (Ruff)/: 12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run actions_setup-python@v5.txt  4_Install Ruff.txt  5_Run Ruff Check.txt  system.txt
logs/logs_56991265440/Security Scan (Bandit)/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run actions_setup-python@v5.txt  4_Install Bandit.txt  5_Run Bandit.txt  9_Post Run actions_setup-python@v5.txt  system.txt
logs/logs_56991265440/Test Python 3.10 on macos-latest/: 12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python 3.10.txt  4_Install Poetry.txt  5_Install dependencies.txt  6_Run Tests.txt  system.txt
logs/logs_56991265440/Test Python 3.10 on ubuntu-latest/: 12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  4_Install Poetry.txt  (+5 more)
safe_playground/analise_dados/: README.md
src/basalguard/: __init__.py
tests/: test_advanced_file_ops_integration.py  test_agent_firewall.py  test_network_guard.py
(+75 files in other folders)
